--- a/siscop-caritas-web/src/main/webapp/WEB-INF/sidebar.xhtml
+++ b/siscop-caritas-web/src/main/webapp/WEB-INF/sidebar.xhtml
@@ -9,14 +9,11 @@
         <div class="sidebar">
             <div class="nano">
                 <div class="nano-content sidebar-scroll-content">
-                    <div class="logo">
-                        <p:graphicImage name="images/logo.png" library="omega-layout" width="113"/>
-                    </div>
-
+                    
                     <div class="profile">
                         <p:graphicImage name="images/profile.png" library="omega-layout" />
                         <a id="profile-button" href="#">
-                            <span class="username">Peggy Olson</span>
+                            <span class="username">Usuario</span>
                             <i class="fa fa-fw fa-cog"></i>
                         </a>
                         <ul>
