--- a/siscop-caritas-web/src/main/webapp/WEB-INF/footer.xhtml
+++ b/siscop-caritas-web/src/main/webapp/WEB-INF/footer.xhtml
@@ -7,6 +7,6 @@
     
     <div class="footer">
         <p:graphicImage name="images/logo-colored.png" library="omega-layout" width="32"/>
-        <span class="footer-text">PrimeFaces Omega Theme and Layout</span>
+        <span class="footer-text">Cáritas El Salvador</span>
     </div>
 </ui:composition>
